--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Base.Theme.ECommerceAndroidTraining"
         tools:targetApi="31">
         <activity
-            android:name=".NavigationScreen"
+            android:name=".AuthenticationScreen"
             android:exported="true"
             android:theme="@style/navigationScreenTheme">
             <intent-filter>
