--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "E-Commerce Android Training"
 include ':app'
+include ':data'
+include ':domain'
