--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
-        dataBinding true
-        viewBinding true
-    }
+
+    android.buildFeatures.viewBinding = true
+    android.buildFeatures.dataBinding = true
 
 }
 
@@ -68,6 +67,7 @@ dependencies {
     //view-model
     implementation ("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
     implementation "androidx.activity:activity-ktx:1.8.2"
+
     // Navigation
     // Kotlin
     def nav_version = "2.7.7"
@@ -89,13 +89,9 @@ dependencies {
 
 
     //datastore using preferances
-    implementation("androidx.datastore:datastore-preferences:1.0.0")
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.7.0")
-    implementation("androidx.datastore:datastore-preferences-core:1.0.0")
-
-
-
-
+    implementation "androidx.core:core-ktx:$coreVersion"
 
     //recycler view
     implementation "androidx.recyclerview:recyclerview:1.3.2"
