--- a/data/build.gradle
+++ b/data/build.gradle
@@ -5,11 +5,11 @@ plugins {
 
 android {
     namespace 'com.training.data'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         minSdk 21
-        targetSdk 33
+        targetSdk 34
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -40,4 +40,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation project(path: ':domain')
+
+    //datastore using preferances
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.7.0")
+    implementation "androidx.core:core-ktx:$coreVersion"
 }
