--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id("com.google.firebase.crashlytics")
     id("kotlin-kapt")
     id("androidx.navigation.safeargs.kotlin")
-    id "dagger.hilt.android.plugin"
+//    id "dagger.hilt.android.plugin"
 
 }
 
@@ -53,45 +53,27 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     //splash
     implementation ("androidx.core:core-splashscreen:1.0.1")
-    //firebase
-    implementation(platform("com.google.firebase:firebase-bom:32.7.3"))
-    implementation("com.google.firebase:firebase-analytics")
-    // Add the dependencies for the Crashlytics and Analytics libraries
-    // When using the BoM, you don't specify versions in Firebase library dependencies
-    implementation("com.google.firebase:firebase-crashlytics")
-    implementation("com.google.firebase:firebase-analytics")
-    //Library to check the internet connection
-    implementation 'com.github.pwittchen:reactivenetwork-rx2:3.0.8'
-
-    def lifecycle_version ="2.4.1"
-    //view-model
-    implementation ("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
-    implementation "androidx.activity:activity-ktx:1.8.2"
-
-    // Navigation
-    // Kotlin
-    def nav_version = "2.7.7"
+    // navigation components
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
-
-    // Feature module Support
     implementation("androidx.navigation:navigation-dynamic-features-fragment:$nav_version")
-    // Testing Navigation
-    androidTestImplementation("androidx.navigation:navigation-testing:$nav_version")
-
-    //coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
-
-    //hilt
-    implementation "com.google.dagger:hilt-android:2.40.5"
-    kapt "com.google.dagger:hilt-android-compiler:2.40.5"
 
 
-    //datastore using preferances
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
-    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.7.0")
-    implementation "androidx.core:core-ktx:$coreVersion"
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
+    implementation("androidx.fragment:fragment-ktx:1.6.2")
+    implementation("androidx.activity:activity-ktx:1.8.2")
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
+
+    // firebase dependencies
+    implementation(platform("com.google.firebase:firebase-bom:32.7.4"))
+    implementation("com.google.firebase:firebase-analytics")
+    implementation("com.google.firebase:firebase-crashlytics")
+
+    // third party libraries
+    implementation("com.github.pwittchen:reactivenetwork-rx2:3.0.8")
+
 
     //recycler view
     implementation "androidx.recyclerview:recyclerview:1.3.2"
@@ -100,7 +82,6 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
 
     //path
-    implementation project(path: ':domain')
     implementation project(path: ':data')
 
 }
