--- a/build.gradle
+++ b/build.gradle
@@ -7,17 +7,30 @@ buildscript {
     dependencies {
         def nav_version = "2.5.3"
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
+//        classpath 'com.android.tools.build:gradle:4.2.2'
+//        classpath 'com.android.tools.build:gradle:8.3.0'
+        classpath 'com.android.tools.build:gradle:7.4.2'
+
+
     }
 }
 plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+//    id("com.android.application") version "8.3.0" apply false
+//    id("com.android.library") version "8.3.0" apply false
+//    id("org.jetbrains.kotlin.android") version "1.9.22" apply false
     id("com.google.gms.google-services") version "4.4.1" apply false
     id("com.google.firebase.crashlytics") version "2.9.9" apply false
-    id 'com.google.dagger.hilt.android' version '2.41' apply false
+//    id 'com.google.dagger.hilt.android' version '2.41' apply false
 
 }
+
+
 ext{
     coreVersion = '1.7.0'
+    nav_version = "2.7.7"
+    lifecycle_version = "2.7.0"
+
 }
